--- a/requirements.txt
+++ b/requirements.txt
@@ -25,22 +25,34 @@ typing-extensions>=4.8.0
 uvicorn[standard]==0.18.3
 watchdog>=2.2.1
 werkzeug>=2.0.3
-psycopg2-binary>=2.9.9
-pydantic>=2.5.3
-uuid>=1.30
-datetime>=5.4
-py-automapper>=1.2.3
-sqlalchemy>=1.4.51
+psycopg2-binary==2.9.9
+pydantic==2.5.3
+uuid==1.30
+datetime==5.4
+fastapi==0.111.0
+py-automapper==1.2.3
+sqlalchemy==1.4.51
+uvicorn
 alembic
-sqlalchemy-stubs>=0.4
+sqlalchemy-stubs==0.4
 pandas==2.1.4
 openpyxl
 dask==2024.1.0
-langchain>=0.2.0
-langchain-openai>=0.1.7
-langchain-community>=0.2.0 
+langchain>=0.2.3
+langchain-openai>=0.1.8
+langchain-community>=0.2.4
+langchain-google-genai>=1.0.6
+google-cloud-aiplatform>=1.55.0
 transformers>=4.41.0
-boto3>=1.34.64
+cryptography>=42.0.2
+jsonschema>=4.21.1
+tensorflow>=2.16.1
+boto3>=1.34.108
+pgvector
 matplotlib>=3.9.0
 seaborn>=0.13.2
 scikit-learn
+langchain-google-vertexai>=1.0.5
+langchain-anthropic>=0.1.15
+anthropic>=0.28.1
+lmdb>=1.4.1
